Orbit Around Selection in Edit Mode is not working after 3.6.0 update #109519

Closed
opened 2023-06-29 16:25:12 +02:00 by Grillus · 1 comment
First-time contributor

System Information
Operating system:
Graphics card:

Blender Version
Broken: 3.6.0, 2023-06-27, c7fc78b81e
Worked: 3.5.0, 2023-03-29, 1be25cfff1

Short description of error
Orbit around selection in edit mode only works if a vertex is selected. After deselecting all verticies, the camera orbits around the world origin as opposed to the last selected vertex as it used to.

Exact steps for others to reproduce the error
Add a cube
Enter Edit Mode
Select a vertex and orbit around it.
De-select all verticies.
You will now orbit around the world origin.

**System Information** Operating system: Graphics card: **Blender Version** Broken: 3.6.0, 2023-06-27, c7fc78b81ecb Worked: 3.5.0, 2023-03-29, 1be25cfff18b **Short description of error** Orbit around selection in edit mode only works if a vertex is selected. After deselecting all verticies, the camera orbits around the world origin as opposed to the last selected vertex as it used to. **Exact steps for others to reproduce the error** Add a cube Enter Edit Mode Select a vertex and orbit around it. De-select all verticies. You will now orbit around the world origin.
Grillus added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-06-29 16:25:13 +02:00
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-30 01:29:51 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-30 02:05:45 +02:00

Thanks for the report.
It was fixed in 4.0 (main).
For 3.6 the fix was put on the list To Be Backported.
Blender LTS: Maintenance Task 3.6

Thanks for the report. It was fixed in 4.0 (main). For 3.6 the fix was put on the list To Be Backported. [Blender LTS: Maintenance Task 3.6](https://projects.blender.org/blender/blender/issues/109399)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109519
No description provided.