Fix #109519: Orbit Around Selection resets pivot if nothing is selected

Caused by 968ecf6f8b.

The value of the last pivot of the view should not be changed if there
is no selection.

The variable is static precisely because of this.